FIX: Overflow hidden

--- a/src/app/modules/home/components/home/home.scss
+++ b/src/app/modules/home/components/home/home.scss
@@ -21,7 +21,6 @@
         content: '';
         width: 100%;
         height: 20vh;
-        background-color: #fff;
         position: absolute;
         z-index: 100;
         bottom: 0;
